--- a/CloudServiceRecommender/src/main/webapp/ControlPanel.xhtml
+++ b/CloudServiceRecommender/src/main/webapp/ControlPanel.xhtml
@@ -18,6 +18,7 @@ and open the template in the editor.
     <hr/>
 
     <h:form id="spot">
+
       <h2>Amazon Aws-Ec2 Instances Price List Downloader</h2>
       <p>
         <h:commandButton value="Start Download" action="#{controlPanel.startFetchingSpotPrices}"/>
@@ -28,11 +29,30 @@ and open the template in the editor.
         <h:outputLabel rendered="#{!controlPanel.batchJobRunning}" value="Aws ec2 instance batch job STOPED"/>
       </p>
       <hr/>
+
       <h2>Processing Karamel Statistics</h2>
       <p>
-        <h:commandButton value="Start processing" action="#{controlPanel.parseStatistics()}"/>
+        <h:commandButton value="Run processing" action="#{controlPanel.parseStatistics()}"/>
       </p>
       <hr/>
+
+      <h2>Running Experiment</h2>
+      <p>
+        <h:outputLabel value="#{controlPanel.experiments}"/>
+      </p>
+      <p>
+        <h:outputLabel value="Experiment Number  " />
+        <h:inputText value="#{controlPanel.experimentId}"/>
+      </p>
+      <p>
+        <h:outputLabel value="Availability Time (Hours) " />
+        <h:inputText value="#{controlPanel.availabilityTimeHours}"/>
+      </p>
+      <p>
+        <h:commandButton value="Run experiment" action="#{controlPanel.runExperiment()}"/>
+      </p>
+      <hr/>
+
       <p>
         <h:outputText id="out" styleClass="ui-widget display"/>
       </p>
